feat(backend): add idempotency, auth checks and basic validations (#82)
- Add @PreAuthorize security check to AuthController endpoints to
enforce proper access control.
- Add @Idempotent annotation to state-modifying endpoints in
ClienteController, UsuarioController, and AlertaChequeController to
prevent duplicate submissions.
- Add validations in GastoCajaService and StockService to reject
operations with negative or zero amounts.